@@ -157,28 +157,3 @@ Please refer to [contributing guide](https://ui.docs.kafbat.io/development/contr
 
 As we're fully independent, team members contribute in their free time.
 Your support is crucial for us, if you wish to sponsor us, take a look [here](https://github.com/sponsors/kafbat) 
-
-
-```shell
-./mvnw clean install -Dmaven.test.skip=true -Ddocker.skip=true -Pprod
-export $(grep -v '^#' /Users/adam.jozwik/git/css-kafka-ui/.password_envs | xargs -0)
-java -Dspring.config.additional-location=../css-kafka-ui/config/config-gen.yml --add-opens java.rmi/javax.rmi.ssl=ALL-UNNAMED -jar api/target/api-0.0.1-SNAPSHOT.jar
-http://localhost:8080/
-
-./mvnw clean install -Dmaven.test.skip=true -Pprod
-
-
-https://539613588543.dkr.ecr.eu-west-1.amazonaws.com/v2/css-kafka/kafbat-ui/blobs/sha256:463fb7761ab7870f5a239f4eecc3097c0c2be1dee70eb4ce0c5fd58376a8d261
-
- 
-docker pull --platform linux/x86_64 images.int.dev-ie-core.jspaas.uk/made-is/token-manager:2.7
-#repo
-git remote add upstream https://github.com/kafbat/kafka-ui.git
-git fetch upstream
-git merge upstream/main
-
-git push -f origin cb52c0648d1549c67ff8b3df8204567dcde6a489:main
-
-Locally, do the same:
-git reset --hard cb52c0648d1549c67ff8b3df8204567dcde6a489
-```
